# libkface

./: .directory  .krazy  AUTHORS  CMakeLists.txt  DESIGN  Messages.sh  NEWS  README  TODO  database.cpp  database.h  kface.cpp  kface.h  kface.pro  kface_global.h  kfaceutils.cpp  kfaceutils.h  libkface.lsm.cmake  libkface.pc.cmake
.kdev4/: libkface.kdev4
OpenTLD/: CMakeLists.txt
OpenTLD/src/libopentld/: CMakeLists.txt
OpenTLD/src/libopentld/tld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  EnsembleClassifier.cpp  EnsembleClassifier.h  ForegroundDetector.cpp  ForegroundDetector.h  IntegralImage.h  NNClassifier.cpp  NNClassifier.h  TLD.cpp  TLD.h  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
OpenTLD/src/opentld/: CMakeLists.txt
OpenTLD/src/opentld/main/: Config.cpp  Config.h  Main.cpp  Main.h  Settings.cpp  Settings.h
OpenTLD/tldinterface/: CMakeLists.txt  tldclassify.h  tlddatabase.cpp  tlddatabase.h  tldface.cpp  tldface.h  tldrecognition.cpp  tldrecognition.h
cmake/modules/: FindKface.cmake  FindLibFace.cmake  FindOpenCV.cmake  MacroOpenCV.cmake
cmake/modules_opencv/: FindOpenCV.cmake
cmake/templates/: KF5KFaceConfig.cmake.in  kface-config.cmake.in  libkface.lsm.cmake.in  libkface.pc.cmake.in
data/: CMakeLists.txt
libface/: Eigenfaces.cpp  Eigenfaces.h  Face.cpp  Face.h  FaceDetect.cpp  FaceDetect.h  Haarcascades.cpp  Haarcascades.h  LibFace.cpp  LibFace.h  LibFaceConfig.h.cmake  LibFaceCore.h  LibFaceUtils.cpp  LibFaceUtils.h  README
libkface/: CMakeLists.txt  Doxyfile  Mainpage.dox  button.cpp  button.h  database.cpp  database.h  dataproviders.cpp  dataproviders.h  face.cpp  face.h  facedetector.cpp  facedetector.h  faceitem.cpp  faceitem.h  facerecognizer.cpp  facerecognizer.h  fancyrect.cpp  fancyrect.h  identity.cpp  identity.h  image.cpp  image.h  image_p.h  kface.cpp  kface.h  kface_global.h  kfaceutils.cpp  kfaceutils.h  libkface_debug.cpp  libkface_export.h  libopencv.h  libopencv.h.cmake.in  marquee.cpp  marquee.h  recognitiondatabase.cpp  recognitiondatabase.h  tldclassify.cpp  tldclassify.h  tlddatabase.cpp  (+6 more)
libkface/alignment-congealing/: funnelreal.cpp  funnelreal.h
libkface/alignment-flandmark/: flandmarkaligner.cpp  flandmarkaligner.h
libkface/database/: databaseaccess.cpp  databaseaccess.h  databaseconfigelement.cpp  databaseconfigelement.h  databasecorebackend.cpp  databasecorebackend.h  databasecorebackend_p.h  databaseerrorhandler.h  databaseinitializationobserver.h  databaseoperationgroup.cpp  databaseoperationgroup.h  databaseparameters.cpp  databaseparameters.h  dbactiontype.cpp  dbactiontype.h  dbconfig.xml  dbcontainers.cpp  dbcontainers.h  schemaupdater.cpp  schemaupdater.h  sqlquery.cpp  sqlquery.h  trainingdb.cpp  trainingdb.h
libkface/detection/: opencvfacedetector.cpp  opencvfacedetector.h
libkface/preprocessing-tantriggs/: tantriggspreprocessor.cpp  tantriggspreprocessor.h
libkface/recognition-opencv-lbph/: facerec_borrowed.cpp  facerec_borrowed.h  lbphfacemodel.cpp  lbphfacemodel.h  opencvlbphfacerecognizer.cpp  opencvlbphfacerecognizer.h
libkface/recognition-opentld/: opentldfacerecognizer.cpp  opentldfacerecognizer.h  unitfacemodel.cpp
src/: CMakeLists.txt  Mainpage.dox  dataproviders.cpp  dataproviders.h  facedetector.cpp  facedetector.h  identity.cpp  identity.h  libkface_debug.cpp  libkface_debug.h  libopencv.h.cmake.in  recognitiondatabase.cpp  recognitiondatabase.h  version.h.cmake.in
src/alignment-congealing/: funnelreal.cpp  funnelreal.h
src/alignment-flandmark/: flandmarkaligner.cpp  flandmarkaligner.h
src/database/: databaseaccess.cpp  databaseaccess.h  databaseconfigelement.cpp  databaseconfigelement.h  databasecorebackend.cpp  databasecorebackend.h  databasecorebackend_p.h  databaseerrorhandler.h  databasefaceaccess.cpp  databasefaceaccess.h  databasefacecontainers.cpp  databasefacecontainers.h  databasefaceinitobserver.h  databasefaceoperationgroup.cpp  databasefaceoperationgroup.h  databasefaceparameters.cpp  databasefaceparameters.h  databasefaceschemaupdater.cpp  databasefaceschemaupdater.h  databaseinitializationobserver.h  databaseoperationgroup.cpp  databaseoperationgroup.h  databaseparameters.cpp  databaseparameters.h  dbactiontype.cpp  dbactiontype.h  dbconfig.xml  dbcontainers.cpp  dbfaceconfig.xml  schemaupdater.cpp  schemaupdater.h  sqlquery.h  trainingdb.cpp  trainingdb.h
src/database/core/: databaseconfigelement.cpp  databaseconfigelement.h  databasecorebackend.cpp  databasecorebackend.h  databasecorebackend_p.h  databaseerrorhandler.h  dbactiontype.cpp  dbactiontype.h  sqlquery.cpp  sqlquery.h
src/detection/: opencvfacedetector.cpp  opencvfacedetector.h
src/preprocessing-tantriggs/: tantriggspreprocessor.cpp  tantriggspreprocessor.h
src/recognition-opencv-lbph/: facerec_borrowed.cpp  facerec_borrowed.h  lbphfacemodel.cpp  lbphfacemodel.h  opencvlbphfacerecognizer.cpp  opencvlbphfacerecognizer.h
test/: CMakeLists.txt  align.cpp  detect.cpp  preprocess.cpp  recognize.cpp
test/gui/: activetooltip.cpp  activetooltip.h  button.cpp  button.h  faceitem.cpp  faceitem.h  fancyrect.h  libkfaceGUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marquee.cpp  marquee.h
test/kfacegui/: button.cpp  faceitem.cpp  faceitem.h  fancyrect.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marquee.cpp  marquee.h
tests/: CMakeLists.txt  align.cpp  detect.cpp  preprocess.cpp  recognize.cpp  traindb.cpp
tests/gui/: button.cpp  button.h  faceitem.cpp  faceitem.h  fancyrect.cpp  fancyrect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marquee.cpp  marquee.h
